[gd_scene load_steps=8 format=2]

[ext_resource path="res://level/LootDrop.gd" type="Script" id=1]
[ext_resource path="res://font/font_help.tres" type="DynamicFont" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.319635, 0.675799, 1 )
colors = PoolColorArray( 1, 0.956863, 0, 1, 1, 0.627451, 0, 1, 1, 0.85098, 0.541176, 1, 1, 0.937255, 0.827451, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = -2.0
orbit_velocity_random = 0.5
radial_accel = 22.61
radial_accel_random = 1.0
scale = 2.0
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 30.0

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Item:modulate:a")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.05, 0.1, 0.5, 0.1, 0.05 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Item:position:y")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, -5.0, 10.0 ]
}

[node name="LootDrop" type="Node2D"]
script = ExtResource( 1 )

[node name="Item" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.05 )
scale = Vector2( 0.6, 0.6 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 15
process_material = SubResource( 3 )

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 4 )

[node name="FirstLoot" type="Label" parent="."]
visible = false
margin_left = -150.0
margin_top = -195.0
margin_right = 165.0
margin_bottom = -120.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.760784, 0.501961, 0.941176, 1 )
text = "Press E while near
loot to pick up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Node2D" parent="."]
visible = false
z_index = 10

[node name="Label" type="Label" parent="Help"]
margin_left = -20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.760784, 0.501961, 0.941176, 1 )
text = "E"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/float = SubResource( 5 )

[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_PickupArea_body_exited"]
